# ctfpilot

./: .gitignore  Dockerfile  LICENSE  README.es.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ctfpilot/: cli.py
ctfpilot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ctfpilot/core/: config.py  engine.py  logger.py  metrics.py  session.py
ctfpilot/modules/recon/: portscan.py
ctfpilot/modules/report/: builder.py
ctfpilot/modules/suggest/: advisor.py  ai_advisor.py
db/: ctfpilot.db
k8s/: configmap.yml  deployment.yml  network-policy.yml  pvc.yml
monitoring/: docker-compose.monitoring.yml  prometheus.yml
